# OtusHomework_2_IpSorter

./: CMakeLists.txt  README.md  main.cpp  parserTest.cpp  utils.hpp
.github/workflows/: cmake.yml  cmake1.yml
